--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 </head>
 <body>
+    <div class="resp1">
 
     <div class="container">
         <p style="color: #fff;" >JS CALCULATOR</p>
@@ -39,7 +40,7 @@
 
 
     </div>
-
+    </div>
     <script src="calc.js"></script>
    
 </body>
