--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <div class="container">
         <p style="color: #fff;" >JS CALCULATOR</p>
         <form action="">
-            <input type="text" id="screen">
+            <div style="position:relative; -ms-transform: translateY(-50%)";>
+            <input type="text" id="screen"></div>
             <br>
             <input class="button number" type="button" value="7" onclick="btnClick(value)">
             <input class="button number" type="button" value="8" onclick="btnClick(value)">
@@ -37,9 +38,12 @@
 
 
         </form>
-
+            <br><br>
+          
 
     </div>
+    <h4 class="pwr">created by</h4>
+    <h3 class="albin">ALBIN BINU</h3>
     </div>
     <script src="calc.js"></script>
    
